crates/ruff_python_parser/tests/snapshots/invalid_syntax@named_expression_in_comprehension_iterable.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/named_expression_in_comprehension_iterable.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..117,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..28,
                    value: ListComp(
                        ExprListComp {
                            node_index: NodeIndex(None),
                            range: 0..28,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 1..2,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 3..27,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 7..8,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Named(
                                        ExprNamed {
                                            node_index: NodeIndex(None),
                                            range: 13..26,
                                            target: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 13..14,
                                                    id: Name("y"),
                                                    ctx: Store,
                                                },
                                            ),
                                            value: Call(
                                                ExprCall {
                                                    node_index: NodeIndex(None),
                                                    range: 18..26,
                                                    func: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 18..23,
                                                            id: Name("range"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    arguments: Arguments {
                                                        range: 23..26,
                                                        node_index: NodeIndex(None),
                                                        args: [
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    node_index: NodeIndex(None),
                                                                    range: 24..25,
                                                                    value: Int(
                                                                        3,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                        keywords: [],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 29..65,
                    value: ListComp(
                        ExprListComp {
                            node_index: NodeIndex(None),
                            range: 29..65,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 30..31,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 32..64,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 36..37,
                                            id: Name("a"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: ListComp(
                                        ExprListComp {
                                            node_index: NodeIndex(None),
                                            range: 41..64,
                                            elt: Named(
                                                ExprNamed {
                                                    node_index: NodeIndex(None),
                                                    range: 43..49,
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 43..44,
                                                            id: Name("b"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    value: NumberLiteral(
                                                        ExprNumberLiteral {
                                                            node_index: NodeIndex(None),
                                                            range: 48..49,
                                                            value: Int(
                                                                1,
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 51..63,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 55..56,
                                                            id: Name("b"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: List(
                                                        ExprList {
                                                            node_index: NodeIndex(None),
                                                            range: 60..63,
                                                            elts: [
                                                                NumberLiteral(
                                                                    ExprNumberLiteral {
                                                                        node_index: NodeIndex(None),
                                                                        range: 61..62,
                                                                        value: Int(
                                                                            1,
                                                                        ),
                                                                    },
                                                                ),
                                                            ],
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 66..74,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 66..68,
                                id: Name("xs"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 71..74,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 72..73,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 75..116,
                    value: ListComp(
                        ExprListComp {
                            node_index: NodeIndex(None),
                            range: 75..116,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 76..77,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 78..115,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 82..83,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 87..89,
                                            id: Name("xs"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [
                                        ListComp(
                                            ExprListComp {
                                                node_index: NodeIndex(None),
                                                range: 93..115,
                                                elt: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 94..95,
                                                        id: Name("z"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                generators: [
                                                    Comprehension {
                                                        range: 96..114,
                                                        node_index: NodeIndex(None),
                                                        target: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 100..101,
                                                                id: Name("z"),
                                                                ctx: Store,
                                                            },
                                                        ),
                                                        iter: Named(
                                                            ExprNamed {
                                                                node_index: NodeIndex(None),
                                                                range: 106..113,
                                                                target: Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 106..107,
                                                                        id: Name("x"),
                                                                        ctx: Store,
                                                                    },
                                                                ),
                                                                value: Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 111..113,
                                                                        id: Name("xs"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                        ifs: [],
                                                        is_async: false,
                                                    },
                                                ],
                                            },
                                        ),
                                    ],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | [x for x in (y := range(3))]
  |              ^^^^^^^^^^^^^ Syntax Error: assignment expression cannot be used in a comprehension iterable expression
2 | [a for a in [(b := 1) for b in [1]]]
3 | xs = [1]
  |


  |
1 | [x for x in (y := range(3))]
2 | [a for a in [(b := 1) for b in [1]]]
  |               ^^^^^^ Syntax Error: assignment expression cannot be used in a comprehension iterable expression
3 | xs = [1]
4 | [x for x in xs if [z for z in (x := xs)]]
  |


  |
2 | [a for a in [(b := 1) for b in [1]]]
3 | xs = [1]
4 | [x for x in xs if [z for z in (x := xs)]]
  |                                ^^^^^^^ Syntax Error: assignment expression cannot be used in a comprehension iterable expression
  |
