crates/ruff_python_parser/tests/snapshots/invalid_syntax@nested_quote_in_format_spec_py312.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/nested_quote_in_format_spec_py312.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..94,
        body: Suite {
            range: 0..94,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 44..53,
                        value: FString(
                            ExprFString {
                                node_index: NodeIndex(None),
                                range: 44..53,
                                value: FStringValue {
                                    inner: Concatenated(
                                        [
                                            FString(
                                                FString {
                                                    range: 44..50,
                                                    node_index: NodeIndex(None),
                                                    elements: [
                                                        Interpolation(
                                                            InterpolatedElement {
                                                                range: 46..49,
                                                                node_index: NodeIndex(None),
                                                                expression: NumberLiteral(
                                                                    ExprNumberLiteral {
                                                                        node_index: NodeIndex(None),
                                                                        range: 47..48,
                                                                        value: Int(
                                                                            1,
                                                                        ),
                                                                    },
                                                                ),
                                                                debug_text: None,
                                                                conversion: None,
                                                                format_spec: Some(
                                                                    InterpolatedStringFormatSpec {
                                                                        range: 49..49,
                                                                        node_index: NodeIndex(None),
                                                                        elements: [],
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                    flags: FStringFlags {
                                                        quote_style: Double,
                                                        prefix: Regular,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ),
                                            Literal(
                                                StringLiteral {
                                                    range: 50..53,
                                                    node_index: NodeIndex(None),
                                                    value: "}",
                                                    flags: StringLiteralFlags {
                                                        quote_style: Double,
                                                        prefix: Empty,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | # parse_options: {"target-version": "3.12"}
2 | f"{1:""}"  # this is a ParseError on all versions
  |      ^ Syntax Error: f-string: expecting `}`
  |
